fixing the horizontal scroll bar on windows

--- a/Assets/CSS/Style.css
+++ b/Assets/CSS/Style.css
@@ -7,6 +7,7 @@
 }
 body {
 	width: 95vw;
+	overflow-x: hidden;
 }
 img {
 	user-select: none;
